--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -178,19 +178,15 @@
                         </span>
                     </div>
                     <!-- /ko -->
-                    <div class="info-container-box">
-                        <span data-bind="css: { 'queue-error-info' : ((queueDataLeft()/1024) > diskSpaceLeft1()) }">
-                            <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft1"></span> GB $T('Glitter-free')
-                        </span>
+                    <div class="info-container-box" data-bind="css: { 'queue-error-info' : ((queueDataLeftMB()/1024) > diskSpaceLeft1()) }">
+                        <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft1"></span> GB $T('Glitter-free')
                         <!-- ko if: (diskSpaceLeft2() > 0)  -->
                         <em>($T('Glitter-freeTemp'))</em>
                         <!-- /ko -->
                     </div>
                     <!-- ko if: (diskSpaceLeft2() > 0)  -->
-                    <div class="info-container-box">
-                        <span data-bind="css: { 'queue-error-info' : ((queueDataLeft()/1024) > diskSpaceLeft2()) }">
-                            <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft2"></span> GB $T('Glitter-free')
-                        </span>
+                    <div class="info-container-box"  data-bind="css: { 'queue-error-info' : ((queueDataLeftMB()/1024) > diskSpaceLeft2()) }">
+                        <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft2"></span> GB $T('Glitter-free')
                     </div>
                     <!-- /ko -->
                     <div class="info-container-box-sorting dropdown" data-bind="visible: hasQueue()">
