--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -1052,7 +1052,9 @@ tr.queueitem>td:first-child>a {
 }
 
 #modal_options .options-server-box .btn {
-    float: right;
+    position: absolute;
+    right: 10px;
+    z-index:2000;
 }
 
 #modal_options .options-server-box:last-child {
