One-time notice of new skin
Only for existing users

--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -1534,6 +1534,10 @@ a:focus {
     -webkit-transform: scale(1, 1);
 }
 
+.dropdown-menu .divider {
+    margin: 3px 0px;
+}
+
 .ui-slider-handle,
 .ui-slider-range {
     transition: all 0.2s ease;
