Limit upload file types

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -244,7 +244,7 @@
                             <div class="input-group" data-toggle="tooltip" data-placement="bottom" title="$T('Glitter-nzbFormats')">
                                 <label class="btn btn-default btn-file">
                                     <span class="glyphicon glyphicon-file"></span> <em>$T('Glitter-chooseFile')&hellip;</em>
-                                    <input type="file" name="nzbFile" class="form-control" id="file" data-bind="event : { change: updateBrowseLabel }" />
+                                    <input type="file" name="nzbFile" class="form-control" accept=".nzb,.rar,.zip,.gz,.bz2" data-bind="event : { change: updateBrowseLabel }" />
                                 </label>
 
                                 <span class="input-group-btn">
@@ -366,7 +366,7 @@
                         <div class="input-group input-group-addfile" data-toggle="tooltip" data-placement="bottom" title="$T('Glitter-nzbFormats')">
                             <label class="btn btn-default btn-file">
                                 <span class="glyphicon glyphicon-file"></span> <em>$T('Glitter-chooseFile')&hellip;</em>
-                                <input type="file" name="nzbFile" class="form-control" id="file" data-bind="event : { change: updateBrowseLabel }" />
+                                <input type="file" name="nzbFile" class="form-control" accept=".nzb,.rar,.zip,.gz,.bz2" data-bind="event : { change: updateBrowseLabel }" />
                             </label>
                         </div>
                     </fieldset>
