Adding search function to the queue

--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -86,7 +86,7 @@ legend,
 .pagination li span,
 .pagination>.disabled>span,
 .pagination>.disabled>span:hover,
-#history-table-search input,
+.search-box input,
 input,
 input.form-control,
 .input-group-addon,
@@ -106,7 +106,7 @@ tbody>tr:last-child td,
 .multioperations-selector,
 .pagination li span,
 .pagination li a,
-#history-table-search input,
+.search-box input,
 input,
 input.form-control,
 .input-group-addon,
