--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -209,7 +209,6 @@
                     </div>
                 </div>
                 <div class="clearfix"></div>
-
                 <table class="table table-striped table-hover queue-table">
                     <thead>
                         <tr>
@@ -220,6 +219,7 @@
                             <th style="width: 60px;"></th>
                         </tr>
                     </thead>
+                    
                     <!-- ko if: !hasQueue() -->
                     <tbody class="nodownloads">
                         <tr>
@@ -341,6 +341,13 @@
                     </div>
                     <div class="clearfix"></div>
                 </form>
+                
+                <div class="input-group search-box" data-bind="visible: queue.hasQueueSearch">
+                    <input type="text" class="form-control" placeholder="$T('Glitter-search')" required data-bind="textInput: queue.searchTerm" />
+                    <a data-bind="event: { mousedown: queue.clearSearchTerm }">
+                        <span class="glyphicon" data-bind="css: { 'glyphicon-search' : !queue.searchTerm(), 'glyphicon-remove' : queue.searchTerm() }"></span>
+                    </a>
+                </div>
                 
                 <ul class="pagination" data-bind="foreach: queue.pagination.allpages, visible: queue.pagination.hasPagination">
                     <li data-bind="css: { active: isCurrent, disabled: isDots }, click: onclick">
@@ -577,8 +584,8 @@
                     </tbody>
                 </table>
 
-                <div class="input-group" id="history-table-search">
-                    <input type="text" class="form-control" placeholder="$T('Glitter-search')" data-bind="textInput: history.searchTerm" />
+                <div class="input-group search-box">
+                    <input type="text" class="form-control" placeholder="$T('Glitter-search')" required data-bind="textInput: history.searchTerm" />
                     <a data-bind="event: { mousedown: history.clearSearchTerm }">
                         <span class="glyphicon" data-bind="css: { 'glyphicon-search' : !history.searchTerm(), 'glyphicon-remove' : history.searchTerm() }"></span>
                     </a>
