--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -693,6 +693,10 @@ tr.queueitem>td:first-child>a {
     position: relative;
 }
 
+.history h2 {
+    clear: left;
+}
+
 .history-table {
     border-bottom: 1px solid #F0F0F0 !important;
 }
@@ -881,30 +885,31 @@ tr.queueitem>td:first-child>a {
     margin-left: 2px;
 }
 
-#history-table-search {
+.search-box {
     float: left;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     margin-right: 5px;
 }
 
-#history-table-search input {
-    width: 130px;
-    transition: width 0.2s ease-out;
+.search-box input {
+    width: 130px !important;
+    transition: width 0.2s ease-out !important;
     border: 1px solid #dddddd;
-    box-shadow: none;
-    -webkit-box-shadow: none;
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
 }
 
-#history-table-search input:focus {
-    width: 250px;
-    border-color: #ccc;
+.search-box input:focus,
+.search-box input:valid {
+    width: 250px !important;
+    border-color: #ccc !important;
 }
 
-#history-table-search input::-ms-clear {
+.search-box input::-ms-clear {
     display: none;
 }
 
-#history-table-search a {
+.search-box a {
     float: right;
     position: absolute;
     display: block;
@@ -915,12 +920,12 @@ tr.queueitem>td:first-child>a {
     z-index: 999;
 }
 
-#history-table-search a span {
+.search-box a span {
     cursor: pointer;
 }
 
 .history-options-show-failed,
-#history-table-search input:focus+span {
+.search-box input:focus+span {
     opacity: 1;
 }
 
